fixed issue on mobile device

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -67,8 +67,8 @@ canvas:hover {
   }
 
   .container-text1 {
-    font-size: 1.5rem;
-    margin: 20px 0;
+    font-size: 1.2rem;
+    margin: 20px;
   }
 
   .container-text {
@@ -76,5 +76,9 @@ canvas:hover {
     font-weight: 600;
     font-size: 1.1rem;
     padding: 0 1rem;
+    max-height: 50px;
+  }
+  .container-text2 {
+    margin-top: 40px;
   }
 }
